# kotyamba_car

./: .gitignore  .gitmodules  CMakeLists.txt  GPIO.md  README.md  RaspberryPi.md  bill_of_materials.md  interesting_projects.md
car/: CMakeLists.txt  README.md
car/include/: car.hpp
car/src/: car.cpp
how_to/: c++.md  c++_threads.md  git.md  github.md
motor/: CMakeLists.txt  README.md  software_PWM.md  test_motor.md
motor/docs/: pigipio.md  test_motor.md
motor/include/: motor.hpp
motor/src/: main.cpp  motor.cpp  motor_pigpio.hpp  motor_wiringPi.hpp
motor_controller/: CMakeLists.txt
motor_controller/docs/: PWM.md  hardware.md  test_motor.md  wiringPi.md
motor_controller/include/: motor_controller.hpp
motor_controller/src/: main.cpp  motor_controller.cpp  motor_controller_pigpio.hpp  motor_controller_wiringPi.hpp
